--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,23 +3,29 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
-html {
+
+
+ 
+
+ html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
-/*
- * Global layout stuff
- */
-
 body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+.container {
+  margin: 80px auto 0px;
+  width: 500px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 2em 20px 2em;
+}
