--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,23 @@
 
+button:hover {
+  background:white ;
+  color:black;
+}
+
+.fas-fa-pencil-alt:hover{
+  color:#00a087;
+}
+
+button{
+  float:right;
+  margin-top: 30px;
+  background-color: #dbfff9;
+  border-radius: 4px;
+  color:#00a087;
+  border: 0.5px groove #787878;
+  padding:10px;
+  margin-right: 10px;
+}
 #nav-bar {
     top:0;
     background-color: #00a087;
@@ -10,6 +29,7 @@
     width:100%;
     z-index: 1;
   }
+
   
   .logo {
     float: left;
